--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,14 @@ img {
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+    height: auto
+}
 /*-- /reset code --*/
 body {
 	font-family: 'Roboto', sans-serif;
