--- a/css/style.css
+++ b/css/style.css
@@ -512,6 +512,14 @@ section.our-services h3.text-center {
 	padding:20px 0;
 	font-family: 'Viga', sans-serif;
 }
+section.our-services img.img-responsive {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+	width:40%;
+	height:40%;
+  margin-bottom: 20px;
+}
 section.our-services p.text-center {
 	font-size:17px;
 	font-weight:300;
